<resources>
    <string name="app_name">Assignment5</string>
    <string name="photo">photo</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="log_in_title">Log in</string>
    <string name="mail_example">jane@example.com</string>
    <string name="password_example">••••••••••••</string>
    <string name="log_in_inlogin">LOG IN</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="policy">By signing up, you agree to Photo’s Terms of Service and Privacy Policy.</string>
    <string name="back_button">Back Button</string>
</resources>