<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="105dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="0dp"
            android:gravity="center_vertical"
            android:layout_margin="110dp"
            android:textSize="48sp"
            android:letterSpacing = "0.01"
            android:drawableStart="@drawable/union"
            android:text="@string/photo"
            tools:ignore="MissingConstraints"
            >

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:drawableStartCompat="@drawable/union__1_"
            android:layout_margin="110dp">

        </androidx.appcompat.widget.AppCompatTextView>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:orientation="horizontal"
        tools:context=".MainActivity">


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logIn"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_marginStart="-400dp"
        android:layout_marginTop="627dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:background="@drawable/rectangle_2"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:paddingTop="15dp"
        >

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="627dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:background="@drawable/rectangle_3"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:paddingTop="15dp">

    </androidx.appcompat.widget.AppCompatButton>



</androidx.appcompat.widget.LinearLayoutCompat>